--- a/ui-elements/aside.css
+++ b/ui-elements/aside.css
@@ -11,7 +11,7 @@
 	height: calc(100vh - 2 * var(--space-s));
 	display: flex;
 	flex-direction: column;
-	box-shadow: var(--box-shadow-light-bck);
+	box-shadow: var(--box-shadow-on-light-bck);
 }
 
 aside .logo {
