--- a/ui-elements/main.css
+++ b/ui-elements/main.css
@@ -91,12 +91,22 @@
 	--font-bold-source-sans-pro: 600;
 	--font-bold-roboto: 700;
 
-	--box-shadow-light-bck: 0px 1px 6px var(--neutral-7);
+	--box-shadow-on-light-bck: 0px 1px 6px var(--neutral-7);
+
+	--box-shadow-on-light-bck-light: 0px 1px 6px var(--neutral-8);
+	--box-shadow-on-light-bck-light-ok: 0px 1px 6px var(--ok-8);
+	--box-shadow-on-light-bck-light-error: 0px 1px 6px var(--error-8);
+
+	--box-shadow-input-inset: inset 0 0 3px var(--neutral-8);
+	--box-shadow-input-inset-ok: inset 0 0 3px var(--ok-8);
+	--box-shadow-input-inset-error: inset 0 0 3px var(--error-8);
 
 	--border-radius-m: 5px;
 
 	--transition-fast: 0.18s;
 	--transition-normal: 0.3s;
+
+	--min-width-m: 250px;
 }
 
 * {
@@ -206,7 +216,7 @@ button.primary-btn {
 	font-family: var(--roboto);
 	font-weight: var(--font-bold-roboto);
 	cursor: pointer;
-	box-shadow: var(--box-shadow-light-bck);
+	box-shadow: var(--box-shadow-on-light-bck);
 	transition: var(--transition-fast) background ease;
 }
 
@@ -238,7 +248,7 @@ button.secondary-btn {
 	font-family: var(--roboto);
 	font-weight: var(--font-bold-roboto);
 	cursor: pointer;
-	box-shadow: var(--box-shadow-light-bck);
+	box-shadow: var(--box-shadow-on-light-bck);
 	transition: var(--transition-fast) background ease;
 }
 
@@ -278,7 +288,7 @@ button.tertiary-btn.hover {
 
 button.tertiary-btn.focus {
 	border: 1px solid var(--neutral-2);
-	border-radius: 5px;
+	border-radius: var(--border-radius-m);
 	color: var(--neutral-1);
 }
 
@@ -336,6 +346,8 @@ input {
 	border: 1px solid var(--neutral-4);
 	border-radius: 0.25rem;
 	flex-shrink: 0;
+	transition: all var(--transition-fast) ease-in-out;
+	box-shadow: var(--box-shadow-input-inset);
 }
 
 [type="checkbox"]:checked {
@@ -353,6 +365,10 @@ input {
 	font-weight: var(--font-bold-roboto);
 	color: var(--neutral-3);
 	font-size: 15px;
+}
+
+.radio-container > label > span {
+	font-weight: var(--font-medium-roboto);
 }
 
 .checkbox-container p {
@@ -406,6 +422,7 @@ input {
 	border: 2px solid var(--neutral-4);
 	border-radius: 50%;
 	background-color: var(--neutral-10);
+	box-shadow: var(--box-shadow-input-inset);
 }
 
 .inner {
@@ -418,4 +435,57 @@ input {
 	border-radius: 50%;
 	background-color: var(--primary-5);
 	opacity: 0;
+}
+
+[type="text"] {
+	border: 1px solid var(--neutral-7);
+	border-radius: var(--border-radius-m);
+	padding: var(--space-xs) var(--space-m);
+	min-width: var(--min-width-m);
+	max-width: var(--min-width-m);
+	outline: none;
+	color: var(--neutral-1);
+	background-color: transparent;
+	box-shadow: var(--box-shadow-input-inset), var(--box-shadow-on-light-bck-light);
+}
+
+[type="text"]::placeholder {
+	color: var(--neutral-7);
+}
+
+[type="text"].focus {
+	border-color: var(--neutral-5);
+}
+
+[type="text"].ok {
+	border-color: var(--ok-3);
+	border-left: var(--space-xxs) solid var(--ok-3);
+	padding-left: var(--space-s);
+	box-shadow: var(--box-shadow-input-inset-ok), var(--box-shadow-on-light-bck-light-ok);
+	background: var(--ok-10);
+}
+
+[type="text"].error {
+	border-color: var(--error-4);
+	border-left: var(--space-xxs) solid var(--error-4);
+	padding-left: var(--space-s);
+	box-shadow: var(--box-shadow-input-inset-error), var(--box-shadow-on-light-bck-light-error);
+	background: var(--error-10);
+}
+
+[type="text"].disabled {
+	opacity: 0.6;
+	cursor: not-allowed;
+}
+
+.text-input-container {
+	margin: var(--space-l) 0;
+	display: flex;
+	flex-direction: column;
+}
+.text-input-container > span {
+	font-size: 10px;
+	color: var(--neutral-6);
+	padding-left: var(--space-m);
+	padding-top: var(--space-xxs);
 }
