--- a/ui-elements/main.css
+++ b/ui-elements/main.css
@@ -85,6 +85,7 @@
 	--space-s: 15px;
 	--space-m: 20px;
 	--space-l: 30px;
+	--space-xl: 40px;
 
 	--font-regular: 400;
 	--font-medium-roboto: 500;
@@ -96,10 +97,12 @@
 	--box-shadow-on-light-bck-light: 0px 1px 6px var(--neutral-8);
 	--box-shadow-on-light-bck-light-ok: 0px 1px 6px var(--ok-8);
 	--box-shadow-on-light-bck-light-error: 0px 1px 6px var(--error-8);
+	--box-shadow-on-light-bck-light-info: 0px 1px 6px var(--yellow-8);
 
 	--box-shadow-input-inset: inset 0 0 3px var(--neutral-8);
 	--box-shadow-input-inset-ok: inset 0 0 3px var(--ok-8);
 	--box-shadow-input-inset-error: inset 0 0 3px var(--error-8);
+	--box-shadow-input-inset-info: inset 0 0 3px var(--yellow-8);
 
 	--border-radius-m: 5px;
 
@@ -113,6 +116,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: var(--source-sans-pro);
+	text-align: justify;
 }
 
 .restrict-width {
@@ -437,6 +441,12 @@ input {
 	opacity: 0;
 }
 
+.text-input-container {
+	margin: var(--space-m) 0;
+	display: flex;
+	flex-direction: column;
+}
+
 [type="text"] {
 	border: 1px solid var(--neutral-7);
 	border-radius: var(--border-radius-m);
@@ -463,6 +473,7 @@ input {
 	padding-left: var(--space-s);
 	box-shadow: var(--box-shadow-input-inset-ok), var(--box-shadow-on-light-bck-light-ok);
 	background: var(--ok-10);
+	color: var(--ok-1);
 }
 
 [type="text"].error {
@@ -470,7 +481,15 @@ input {
 	border-left: var(--space-xxs) solid var(--error-4);
 	padding-left: var(--space-s);
 	box-shadow: var(--box-shadow-input-inset-error), var(--box-shadow-on-light-bck-light-error);
+	color: var(--error-1);
 	background: var(--error-10);
+}
+
+[type="text"].info {
+	border-color: var(--yellow-4);
+	border-left: var(--space-xxs) solid var(--yellow-4);
+	padding-left: var(--space-s);
+	box-shadow: var(--box-shadow-input-inset-info), var(--box-shadow-on-light-bck-light-info);
 }
 
 [type="text"].disabled {
@@ -478,14 +497,56 @@ input {
 	cursor: not-allowed;
 }
 
-.text-input-container {
-	margin: var(--space-l) 0;
-	display: flex;
-	flex-direction: column;
-}
 .text-input-container > span {
 	font-size: 10px;
 	color: var(--neutral-6);
 	padding-left: var(--space-m);
 	padding-top: var(--space-xxs);
+	min-height: 18px;
+	max-width: calc(var(--min-width-m) - var(--space-m));
+}
+
+[type="text"].ok ~ span {
+	color: var(--ok-2);
+}
+
+[type="text"].error ~ span {
+	color: var(--error-2);
+	font-weight: var(--font-bold-roboto);
+}
+[type="text"].info ~ span {
+	font-weight: var(--font-bold-roboto);
+}
+
+.form-section {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.form-info h4 {
+	color: var(--primary-1);
+	margin-bottom: var(--space-xs);
+}
+
+@media screen and (min-width: 900px) {
+	.form-section {
+		flex-direction: row;
+	}
+
+	.form-section:not(:first-child) {
+		margin-top: var(--space-l);
+	}
+
+	.form-info {
+		margin-right: var(--space-xl);
+	}
+
+	.form-info > * {
+		text-align: right;
+		width: 320px;
+	}
+	.form-inputs > div:first-child {
+		margin-top: var(--space-xxs);
+	}
 }
