--- a/ui-elements/main.css
+++ b/ui-elements/main.css
@@ -532,7 +532,7 @@ input {
 .form-question {
 	color: var(--primary-2);
 	font-size: 16px;
-	margin-bottom: var(--space-xs);
+	margin-bottom: var(--space-xxs);
 }
 
 .form-info h4 {
