--- a/tryit-frontend/assets/css/main.css
+++ b/tryit-frontend/assets/css/main.css
@@ -185,6 +185,12 @@ h6 {
 	text-transform: uppercase;
 }
 
+a {
+	color: var(--primary-4);
+	font-weight: var(--font-bold-source-sans-pro);
+	text-decoration: none;
+}
+
 @media screen and (min-width: 592px) {
 	h1 {
 		font-size: 48px;
