--- a/ui-elements/Cards/Cards.css
+++ b/ui-elements/Cards/Cards.css
@@ -1,15 +1,15 @@
 
 .tarjeta{
     font-family: sans-serif;
-    width: 20%;
-    /*max-width: 550px;*/
-    min-width:350px;
+    width: 40%;
+    max-width: 300px;
     padding: 20px;
     box-shadow: 0 0 8px #888888;
     display: flex;
     flex-direction: row;
-    font-size: 0.7em; 
+    font-size: 0.7em;
 }
+
 .nombre{
     font-size: 1.1em;
     letter-spacing: 0.8px;
@@ -18,7 +18,7 @@
     width: 100px;
     height: 100px;
     border-radius:50%;
-    margin-top: 0.1rem;
+    margin: 15px auto;
 }
 .funcion{
     color: #0071BC;
@@ -26,11 +26,22 @@
 .info{
     text-align: left;
     margin-left: 3em;
-   /* line-height:1.1;*/
 }
 
 .descripcion{
     font-weight: 300;
+}
+
+@media (max-width: 600px){
+    .tarjeta {
+        flex-direction: column;
+        text-align: center;
+        padding: 2em;
+    }
+    #foto{
+        margin: auto;
+        padding-bottom: 1em;
+    }
 }
 
 
