--- a/tryit-frontend/assets/css/main.css
+++ b/tryit-frontend/assets/css/main.css
@@ -112,6 +112,7 @@
 	--transition-fast: 0.18s;
 	--transition-normal: 0.3s;
 	--transition-slow: 0.5s;
+	--transition-very-slow: 0.8s;
 
 	--min-width-m: 250px;
 }
@@ -121,6 +122,7 @@
 	padding: 0;
 	font-family: var(--source-sans-pro);
 	text-align: justify;
+	-webkit-tap-highlight-color: transparent;
 }
 
 @media screen and (min-width: 600px) {
@@ -235,4 +237,29 @@ input {
 	color: var(--primary-2);
 	font-size: 16px;
 	margin-bottom: var(--space-xxs);
+}
+
+.phone-padding {
+	padding-left: var(--space-l);
+	padding-right: var(--space-l);
+}
+
+
+.phone-margin {
+	margin-left: var(--space-l);
+	margin-right: var(--space-l);
+}
+
+@media screen and (min-width: 992px) {
+	.phone-padding {
+	padding-left: inherit;
+	padding-right: inherit
+}
+
+
+.phone-margin {
+	margin-left: inherit;
+	margin-right: inherit;
+}
+
 }
